# BERTgery

./: README.md  pyproject.toml  test_modal.py
src/bertgery/layers/: bert_block.py  flash_attn.py  flash_bert.py  sdpa.py
src/bertgery/operators/: __init__.py  extend_positions.py  fuse_mlp.py  patch.py  patch_attention.py  prune_layers.py
